--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Data Breaches</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="static/css/style.css">
 </head>
 
-<body style="background-color: rgb(225, 227, 227)">
+<!--<body style="background-color: rgb(225, 227, 227)">-->
 
   <div class="container">
     <div class="row">
       <div class="col-md-12 jumbotron text-center">
         <h1>Data Breaches</h1>
-        <p>Explore the data using the Dropdown Menu to filter based on Data Breach Sector</p>
+        <p>Explore Data Breaches by Sector</p>
       </div>
     </div>
     <div class="row">
